# omnistream

./: Cargo.toml  README.md  vercel.json
api/: search.rs
public/: index.html
src/: enums.rs  extraction.rs  handler.rs  lib.rs
