[package]
name = "omnistream"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = "0.3.27"
reqwest = { version = "0.11", features = ["json"] }
select = "0.6.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1", features = ["raw_value"] }
tokio = { version = "1", features = ["full"] }
vercel_runtime = "0.3.4"

[[bin]]
name = "search"
path = "api/search.rs"
